@@ -1,3 +1,7 @@
+Oct 05, 2007 - chris
+o added function ham_cursor_get_duplicate_count
+o fixed a bug in coupling an uncoupling cursor: the duplicate id was lost
+
 Oct 04, 2007 - chris
 o record numbers are now no longer reused after they were deleted and the
     database was reopened.
